Add WebApi project.

--- a/ToolsControl.WebAPI/Properties/launchSettings.json
+++ b/ToolsControl.WebAPI/Properties/launchSettings.json
@@ -1,18 +1,20 @@
 ﻿{
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64711",
-      "sslPort": 44307
+      "applicationUrl": "http://localhost:28875",
+      "sslPort": 44377
     }
   },
   "profiles": {
-    "ToolsControl.WebAPI": {
+    "ToolsControll.WebAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7070;http://localhost:5299",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7181;http://localhost:5226",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
