--- a/ToolsControl.BLL/ToolsControl.BLL.csproj
+++ b/ToolsControl.BLL/ToolsControl.BLL.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ToolsControl.DAL\ToolsControl.DAL.csproj" />
+    </ItemGroup>
+
 </Project>
